contact &CGU added

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -8,15 +8,15 @@
                     <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home
+                            <a class="nav-link active" href="{{path('app_home')}}">Home
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="{{path('page_contact')}}">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="{{path('page_cgu')}}">CGU</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-secondary ms-2" href="#">Connexion</a>
